# graphql-client

./: .editorconfig  .gitattributes  .gitignore  .prettierignore  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  README.md.skt.md  query.graphql  schema.json
examples/call_from_js/: Cargo.toml  build.sh  index.html  schema.json  webpack.config.js
examples/call_from_js/src/: lib.rs
examples/github/: .graphqlconfig  Cargo.toml  README.md
examples/github/examples/: github.rs  query_1.graphql  schema.graphql
examples/github/src/: main.rs  query_1.graphql  query_one.graphql  schema.graphql
examples/hasura/: Cargo.toml  README.md
examples/hasura/examples/: hasura.rs  query_1.graphql
examples/hasura/src/: main.rs  schema.graphql
examples/wasm/: Cargo.toml  README.md  schema.json
examples/wasm/src/: main.rs  query.graphql  requests.rs
examples/web/: .gitignore  Cargo.toml  README.md  build.sh  index.html
examples/web/examples/: web.rs
examples/web/src/: lib.rs
graphql-introspection-query/: Cargo.toml  README.md
graphql-introspection-query/src/: introspection_response.rs  lib.rs
graphql_client/: Cargo.toml  README.md  build.rs
graphql_client/examples/call_from_js/: .gitignore  Cargo.toml  README.md  convenient_fetch.js  index.js  package.json  schema.json
graphql_client/examples/call_from_js/src/: lib.rs  puppy_smiles.graphql
graphql_client/examples/example_module/: Cargo.toml
graphql_client/examples/github/src/: main.rs  (+2 more)
graphql_client/examples/web/: .gitignore  Cargo.toml  call_from_js.js  index.js  web_bg.d.ts
graphql_client/src/: client.rs  http.rs  lib.rs  reqwest.rs  serde_with.rs  web.rs
graphql_client/tests/: Germany.graphql  alias.rs  batch_queries.rs  client.rs  countries_schema.graphql  custom_scalars.rs  default.rs  deprecation.rs  extern_enums.rs  fragment_chain.rs  fragments.rs  input_object_variables.rs  int_id.rs  interfaces.rs  introspection.rs  json_schema.rs  more_derives.rs  one_of_input.rs  operation_selection.rs  readable_debug.rs  scalar_variables.rs  skip_serializing_none.rs  subscriptions.rs  type_refining_fragments.rs  union_query.rs  web.rs
graphql_client/tests/default/: query.graphql  schema.graphql
graphql_client/tests/deprecation/: query.graphql
graphql_client/tests/extern_enums/: multiple_extern_enums_query.graphql  multiple_extern_enums_response.json  schema.graphql  single_extern_enum_query.graphql  single_extern_enum_response.json
graphql_client/tests/fragment_chain/: query.graphql  schema.graphql
graphql_client/tests/fragments/: query.graphql  schema.graphql
graphql_client/tests/input_object_variables/: input_object_variables_query.graphql  input_object_variables_query_defaults.graphql  input_object_variables_schema.graphql
graphql_client/tests/int_id/: query.graphql  schema.graphql
graphql_client/tests/interfaces/: interface_not_on_everything_query.graphql  interface_not_on_everything_query.rs  interface_query.graphql  interface_response.json  interface_response_not_on_everything.json  interface_schema.graphql  interface_with_fragment_query.graphql  interface_with_fragment_response.json  interface_with_type_refining_fragment_query.graphql
graphql_client/tests/json_schema/: query.graphql  query.rs  query_2.graphql  schema_1.json  schema_2.json
graphql_client/tests/more_derives/: query.graphql
graphql_client/tests/one_of_input/: query.graphql  schema.graphql
graphql_client/tests/operation_selection/: schema.graphql
graphql_client/tests/scalar_variables/: scalar_variables_query.graphql  scalar_variables_query_defaults.graphql  scalar_variables_schema.graphql
graphql_client/tests/skip_serializing_none/: query.graphql  schema.graphql
graphql_client/tests/subscription/: subscription_query.graphql  subscription_query_response.json
graphql_client/tests/unions/: fragment_and_more_response.json  type_refining_fragment_on_union_query.graphql  union_query.graphql  union_query.rs  union_query_response.json  union_schema.graphql
graphql_client_cli/: Cargo.toml  README.md
graphql_client_cli/src/: error.rs  generate.rs  introspect_schema.rs  introspection_queries.rs  introspection_schema.graphql  introspection_schema.rs  main.rs
graphql_client_cli/src/graphql/: introspection_query.graphql  introspection_query_with_isOneOf_specifiedByUrl.graphql  introspection_query_with_is_one_of.graphql  introspection_query_with_specified_by.graphql  introspection_schema.graphql
graphql_client_codegen/: Cargo.toml
graphql_client_codegen/src/: attributes.rs  codegen.rs  codegen_options.rs  constants.rs  deprecation.rs  enums.rs  field_type.rs  fragments.rs  generated_module.rs  inputs.rs  interfaces.rs  introspection_response.rs  lib.rs  normalization.rs  objects.rs  operations.rs  query.rs  rendering.rs  resolution.rs  scalars.rs  schema.rs  selectable.rs  selection.rs  shared.rs  type_qualifiers.rs  unions.rs  variables.rs
graphql_client_codegen/src/codegen/: enums.rs  inputs.rs  selection.rs  shared.rs
graphql_client_codegen/src/query/: fragments.rs  operations.rs  selection.rs  validation.rs
graphql_client_codegen/src/schema/: graphql_parser_conversion.rs  json_conversion.rs  tests.rs
graphql_client_codegen/src/tests/: foobars_query.graphql  foobars_schema.graphql  github.rs  keywords_query.graphql  keywords_schema.graphql  mod.rs  posts_query.graphql  posts_schema.graphql
graphql_client_web/: .gitignore  Cargo.toml  README.md
graphql_client_web/src/: lib.rs
graphql_client_web/tests/: Germany.graphql  countries_schema.json  web.rs
graphql_query_derive/: Cargo.toml
graphql_query_derive/src/: attributes.rs  codegen.rs  constants.rs  deprecation.rs  enums.rs  field_type.rs  fragments.rs  graphql_config.rs  inputs.rs  interfaces.rs  introspection_response.rs  lib.rs  objects.rs  operations.rs  query.rs  read_graphql_config.rs  scalars.rs  schema.rs  selection.rs  shared.rs  unions.rs  variables.rs
graphql_query_derive/src/tests/: github.rs  github_schema.graphql  github_schema.json  star_wars_query.graphql
src/: lib.rs
(+56 files in other folders)
