[package]
name = "graphql_client"
version = "0.0.1"
authors = ["Tom Houlé <tom@tomhoule.com>"]

[dependencies]
failure = "*"
quote = "*"
graphql_query_derive = {path = "./graphql_query_derive"}
graphql-parser = "*"
serde = "1.0"
serde_derive = "1.0"

[workspace]
members = [
    ".",
    "examples/github",
    "graphql_query_derive",
    "graphql_client_cli",
]
