[package]
name = "graphql_client"
version = "0.0.1"
authors = ["Tom Houlé <tom@tomhoule.com>"]
description = "A work-in-progress generic graphql client"
repository = "https://github.com/tomhoule/graphql-client"
license = "Apache-2.0 OR MIT"

[dependencies]
failure = "0.1"
quote = "0.3"
graphql_query_derive = {path = "./graphql_query_derive", version = "0.0.1"}
graphql-parser = "0.2.0"
serde = "1.0"
serde_derive = "1.0"

[dev-dependencies]
serde_json = "1.0"

[workspace]
members = [
    ".",
    "examples/call_from_js",
    "examples/github",
    "graphql_query_derive",
    "graphql_client_cli",
]
