[package]
name = "graphql_client"
version = "0.4.0"
authors = ["Tom Houlé <tom@tomhoule.com>"]
description = "Typed GraphQL requests and responses"
repository = "https://github.com/tomhoule/graphql-client"
license = "Apache-2.0 OR MIT"
keywords = ["graphql",  "api", "web", "webassembly", "wasm"]
categories = ["network-programming", "web-programming", "wasm"]

[dependencies]
failure = "0.1"
quote = "0.6"
graphql_query_derive = {path = "./graphql_query_derive", version = "0.4.0"}
graphql-parser = "0.2.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[workspace]
members = [
    ".",
    "examples/example_module",
    "examples/github",
    "graphql_query_derive",
    "graphql_client_codegen",
    "graphql_client_cli",
]
