[package]
name = "graphql_client"
version = "0.10.0"
authors = ["Tom Houlé <tom@tomhoule.com>"]
description = "Typed GraphQL requests and responses"
repository = "https://github.com/graphql-rust/graphql-client"
license = "Apache-2.0 OR MIT"
keywords = ["graphql", "api", "web", "webassembly", "wasm"]
categories = ["network-programming", "web-programming", "wasm"]
edition = "2018"
homepage = "https://github.com/graphql-rust/graphql-client"
readme = "../README.md"

[dependencies]
serde = { version = "^1.0.78", features = ["derive"] }
serde_json = "1.0"

# Optional dependencies
graphql_query_derive = { path = "../graphql_query_derive", version = "0.10.0", optional = true }
reqwest = { version = "^0.11", features = ["json"], optional = true }

[features]
default = ["graphql_query_derive"]
reqwest-blocking = ["reqwest/blocking"]
