[package]
name = "graphql_client_cli"
description = "The CLI for graphql-client"
version = "0.9.0"
authors = ["Tom Houlé <tom@tomhoule.com>"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/graphql-rust/graphql-client"
edition = "2018"

[[bin]]
name = "graphql-client"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
reqwest = "^0.9"
graphql_client = { version = "0.9.0", path = "../graphql_client" }
graphql_client_codegen = { path = "../graphql_client_codegen/", version = "0.9.0" }
structopt = "0.3"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
syn = "^1.0"
log = "^0.4"
env_logger = "^0.6"

rustfmt-nightly = { version = "1.4.5", optional = true }

[features]
default = []
rustfmt = ["rustfmt-nightly"]
