[package]
name = "graphql_client_cli"
description = "The CLI for graphql-client"
version.workspace = true
authors = ["Tom Houlé <tom@tomhoule.com>"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/graphql-rust/graphql-client"
edition = "2018"

[[bin]]
name = "graphql-client"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
graphql_client = { version = "0.16.0", path = "../graphql_client", default-features = false, features = ["graphql_query_derive", "reqwest-blocking"] }
graphql_client_codegen = { path = "../graphql_client_codegen/", version = "0.16.0" }
clap = { version = "^4.0", features = ["derive"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
log = "^0.4"
env_logger = { version = "0.10.2", features = ["color"] }
syn = { version = "^2.0", features = ["full"] }
anstyle = "1.0.10"

[features]
default = []
