[package]
name = "graphql_client_codegen"
version = "0.8.0"
authors = ["Tom Houlé <tom@tomhoule.com>"]
description = "Utility crate for graphql_client"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/graphql-rust/graphql-client"
edition = "2018"

[dependencies]
failure = "^0.1"
lazy_static = "^1.3"
quote = "^1.0"
syn = "^1.0"
proc-macro2 = { version = "^1.0", features = [] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
heck = "^0.3"
graphql-parser = "^0.2"
derivative = "1.0.2"
