[package]
name = "graphql_client_codegen"
version = "0.8.0"
authors = ["Tom Houlé <tom@tomhoule.com>"]
description = "Utility crate for graphql_client"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/graphql-rust/graphql-client"
edition = "2018"

[dependencies]
failure = "0.1"
graphql-introspection-query = { path = "../graphql-introspection-query" }
graphql-parser = "0.2.2"
heck = "0.3"
lazy_static = "1.0"
proc-macro2 = { version = "0.4", features = [] }
quote = "0.6"
serde_json = "1.0"
syn = "0.15.20"
