[package]
name = "graphql_client_codegen"
version = "0.9.0"
authors = ["Tom Houlé <tom@tomhoule.com>"]
description = "Utility crate for graphql_client"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/graphql-rust/graphql-client"
edition = "2018"

[dependencies]
anyhow = "1.0"
graphql-introspection-query = { version = "0.1.0", path = "../graphql-introspection-query" }
graphql-parser = "^0.2"
heck = "0.3"
lazy_static = "1.3"
proc-macro2 = { version = "^1.0", features = [] }
quote = "^1.0"
serde_json = "1.0"
serde = { version = "^1.0", features = ["derive"] }
syn = "^1.0"
thiserror = "1.0.10"
petgraph = "0.5.0"
