[package]
name = "graphql_client_web"
version = "0.5.1"
authors = ["Tom Houlé <tom@tomhoule.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
failure = "0.1.2"
futures = "*"
graphql_client = { path = "../graphql_client", version = "0.5.1" }
log = "0.4.5"
serde_json = "1.0.32"
wasm-bindgen = "0.2.29"
wasm-bindgen-futures = "0.3.2"
js-sys = "0.3.5"

[dependencies.web-sys]
version = "0.3.2"
features = [
    "Headers",
    "Request",
    "RequestInit",
    "Response",
    "Window",
]

[dev-dependencies]
serde = "*"
serde_derive = "*"
wasm-bindgen-test = "0.2.25"
