[package]
name = "graphql_client_web"
version = "0.7.0"
authors = ["Tom Houlé <tom@tomhoule.com>"]
edition = "2018"
description = "Typed GraphQL requests and responses (web integration)"
license = "Apache-2.0 OR MIT"
keywords = ["graphql",  "api", "web", "webassembly", "wasm"]
categories = ["network-programming", "web-programming", "wasm"]
repository = "https://github.com/graphql-rust/graphql-client"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
failure = "0.1.2"
graphql_client = { path = "../graphql_client", version = "0.7.0" }
log = "0.4.5"
serde_json = "1.0.32"
wasm-bindgen = "0.2.29"
wasm-bindgen-futures = "0.3.2"
js-sys = "0.3.5"
futures = "0.1.25"

[dependencies.web-sys]
version = "0.3.2"
features = [
    "Headers",
    "Request",
    "RequestInit",
    "Response",
    "Window",
]

[dev-dependencies]
serde = "1"
serde_derive = "1"
wasm-bindgen-test = "0.2.25"
