[package]
name = "graphql_client_web"
version = "0.8.0"
authors = ["Tom Houlé <tom@tomhoule.com>"]
edition = "2018"
description = "Typed GraphQL requests and responses (web integration)"
license = "Apache-2.0 OR MIT"
keywords = ["graphql",  "api", "web", "webassembly", "wasm"]
categories = ["network-programming", "web-programming", "wasm"]
repository = "https://github.com/graphql-rust/graphql-client"

[dependencies.graphql_client]
version = "0.8.0"
path = "../graphql_client"
features = ["web"]

[dev-dependencies]
serde = { version = "^1.0", features = ["derive"] }
wasm-bindgen-test = "0.2.50"
