[package]
name = "graphql_query_derive"
version = "0.9.0"
authors = ["Tom Houlé <tom@tomhoule.com>"]
description = "Utility crate for graphql_client"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/graphql-rust/graphql-client"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
anyhow = "1.0"
syn = { version = "^1.0", features = ["extra-traits"] }
proc-macro2 = { version = "^1.0", features = [] }
graphql_client_codegen = { path = "../graphql_client_codegen/", version = "0.9.0" }
