[package]
name = "call_from_js"
version = "0.1.0"
authors = ["Tom Houlé <tom@tomhoule.com>"]

[profile.release]
lto = "thin"

[lib]
crate-type = ["cdylib"]

[dependencies]
graphql_client = { path = "../..", version = "0.2.0" }
wasm-bindgen = "0.2.12"
serde = "1.0.67"
serde_derive = "1.0.67"
serde_json = "1.0.22"
lazy_static = "1.0.1"

[workspace]
members = ["."]
