[package]
name = "graphql_query_github_example"
version = "0.1.0"
authors = ["Tom Houlé <tom@tomhoule.com>"]
edition = "2018"
publish = false

[dev-dependencies]
anyhow = "1.0"
graphql_client = { path = "../../graphql_client", features = ["reqwest-blocking"] }
reqwest = { version = "0.13", features = ["json", "blocking"] }
prettytable-rs = "^0.10.0"
clap = { version = "^4.0", features = ["derive"] }
log = "^0.4"
env_logger = "0.10.2"
