[package]
name = "graphql_query_hasura_example"
version = "0.1.0"
authors = ["Mark Catley <mark@catley.net.nz>"]
edition = "2018"

[dev-dependencies]
anyhow = "1.0"
graphql_client = { path = "../../graphql_client" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
reqwest = "^0.9.0"
prettytable-rs = "0.7.0"
dotenv = "0.13.0"
log = "0.4.3"
env_logger = "0.5.10"
