[package]
name = "graphql_query_hasura_example"
version = "0.1.0"
authors = ["Mark Catley <mark@catley.net.nz>"]
edition = "2018"

[dev-dependencies]
anyhow = "1.0"
graphql_client = { path = "../../graphql_client", features = ["reqwest-blocking"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
prettytable-rs = "0.10.0"
log = "0.4.3"
env_logger = "0.11.6"
