[package]
name = "wasm"
version = "0.1.0"
authors = ["Tom Houlé <tom@tomhoule.com>"]

[dependencies]
graphql_client = { path = "../..", version = "0.0.1"}
stdweb = "0.4.7"
yew = { git = "https://github.com/DenisKolodin/yew" }
serde = "1.0.66"
serde_json = "1.0.22"
serde_derive = "1.0.66"
http = "0.1.7"
