[package]
name = "web"
version = "0.1.0"
authors = ["Tom Houlé <tom@tomhoule.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
graphql_client = { path = "../../graphql_client", features = ["reqwest"] }
wasm-bindgen = "^0.2"
js-sys = "0.3.6"
wasm-bindgen-futures = "0.4.56"
reqwest = "0.12"

[dependencies.web-sys]
version = "0.3.6"
features = [
    "console",
    "Document",
    "Element",
    "EventTarget",
    "Node",
    "HtmlBodyElement",
    "HtmlDocument",
    "HtmlElement",
    "Window",
]
