[package]
name = "web"
version = "0.1.0"
authors = ["Tom Houlé <tom@tomhoule.com>"]
edition = "2018"

[profile.release]
lto = "thin"

[lib]
crate-type = ["cdylib"]

[dependencies]
graphql_client_web = { path = "../../../graphql_client_web" }
wasm-bindgen = "0.2.12"
serde = "1.0.67"
serde_derive = "1.0.67"
serde_json = "1.0.22"
lazy_static = "1.0.1"
js-sys = "0.3.6"
futures = "0.1.25"
wasm-bindgen-futures = "0.3.6"

[dependencies.web-sys]
version = "0.3.6"
features = [
    "console",
    "Document",
    "Element",
    "EventTarget",
    "Node",
    "HtmlBodyElement",
    "HtmlDocument",
    "HtmlElement",
]

[workspace]
members = ["."]
